Fix #41 - Red buttons in scrollbar

--- a/gtk-3.20/gtk-widgets.css
+++ b/gtk-3.20/gtk-widgets.css
@@ -1749,7 +1749,7 @@ scrollbar button:disabled {
     -gtk-icon-source: none;
     background-size: 100% 100%;
     background-image: none;
-    background-color: red;
+    background-color: transparent;
 }
 
 scrollbar.horizontal button {
